--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Gunjan Joshi - Remotely exploring the earth, one pixel at a time 🛰🌍 </title>
@@ -14,33 +9,64 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+		<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
+				<header id="header">
 						<div class="logo">
-
+							<a href="#">GJ</a>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Gunjan Joshi</h1>
-								<p>asldxnsakncdsacnskancskc</p>
-<p><a href="https://github.com/joshigunjan/" class="icon brands fa-github"><span class="label">GitHub</span></a>
-<a href="https://twitter.com/gunjanjoshi882" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
-<a href = "mailto: gunjanjoshi88@gmail.com">Email</a>
-</p>
+								<p>Remotely exploring the earth, one pixel at a time 🛰🌍</p>
+								<p>
+									<a href="https://github.com/joshigunjan/" class="icon brands fa-github"><span class="label">GitHub</span></a>
+									<a href="https://twitter.com/gunjanjoshi882" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+									<a href="mailto:gunjanjoshi88@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
+								</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#About me">about</a></li>
-								<li><a href="#research">research</a></li>
-								<li><a href="#Volunteering">teaching</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
-							</ul>
+								<li><a href="#about">About me</a></li>
+								<li><a href="#research">Research</a></li>
+								<li><a href="#teaching">Teaching</a></li>
+								</ul>
 						</nav>
 					</header>
+
+				<div id="main">
+
+						<article id="about">
+								<h2 class="major">About Me</h2>
+								<p>This is where you would add information about yourself.</p>
+								</article>
+
+						<article id="research">
+								<h2 class="major">Research</h2>
+								<p>Details about your research projects would go here.</p>
+								</article>
+
+						<article id="teaching">
+								<h2 class="major">Teaching</h2>
+								<p>Information about your teaching experience and activities.</p>
+								</article>
+
+					</div>
+
+				<footer id="footer">
+						<p class="copyright">&copy; Gunjan Joshi. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+					</footer>
+
+			</div>
+
+		<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
