--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('https://via.placeholder.com/1500x1000') no-repeat center center/cover;
+      background: url('aerial-shot-swiss-alps.jpg') no-repeat center center/cover;;
       color: white;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
     }
