--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
       margin: 0 10px;
       color: white;
     }
+    @keyframes fadeZoomIn {
+  0% {
+    opacity: 0;
+    transform: scale(1.05);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+body {
+  animation: fadeZoomIn 1.5s ease-out;
+}
+
   </style>
 </head>
 <body>
