--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@ body {
   </style>
 </head>
 <body>
-  <header>
-    <h1>Gunjan Joshi</h1>
-    <div class="subtitle">Remotely exploring the Earth, one pixel at a time 🛰🌍</div>
-  </header>
+ <header>
+  <h1>Gunjan Joshi</h1>
+  <div class="subtitle">Remotely exploring the Earth, one pixel at a time 🛰🌍</div>
+  <div class="intro-text">Researcher | Earth Observation Enthusiast | AI for Geoscience | Remote Sensing</div>
+</header>
 
   <nav>
     <button class="tablink active" onclick="openTab(event, 'about')">About Me</button>
