--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: url('aerial-shot-swiss-alps.jpg') no-repeat center center/cover;
+      background-attachment: fixed;  /* Keep the background static while scrolling */
       color: white;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
     }
