--- a/index.html
+++ b/index.html
@@ -130,9 +130,10 @@ body {
 
   <footer>
     <div class="links">
-      <a href="https://github.com/yourusername">GitHub</a>
-      <a href="https://twitter.com/yourhandle">Twitter</a>
-      <a href="mailto:your.email@example.com">Email</a>
+     
+      <a href="https://twitter.com/gunjanjoshi882">Twitter</a>
+      <a href="https://www.linkedin.com/in/gunjan-joshi-phd-793603197/">LinkedIn</a>
+       <a href="https://github.com/joshigunjan">GitHub</a>
     </div>
   </footer>
 
